--- a/movie.list/src/module/pages/LoginPage.scss
+++ b/movie.list/src/module/pages/LoginPage.scss
@@ -113,3 +113,10 @@ $black: #343a40;
 ::placeholder {
     color: $black;
 }
+
+.error-login {
+    color: #cd2525;
+    margin: 0 0 1em 0;
+    font-size: 1rem;
+    padding: 0;
+}
